fix(web-components): updated styling to fix tooltip positioning
posiion:relative on the ic-input-* elements were pushing the tooltip out of place. The position
property has been removed from parents and added to the direct parent of the buttons where
applicable

--- a/packages/web-components/src/components/ic-search-bar/ic-search-bar.css
+++ b/packages/web-components/src/components/ic-search-bar/ic-search-bar.css
@@ -67,8 +67,6 @@
   background-color: var(--ic-focus-blue) !important;
   box-shadow: inset 0 0 0 2px var(--ic-focus-glow) !important;
   border-radius: var(--ic-space-xxs);
-  height: var(--ic-space-xl);
-  margin-top: var(--ic-space-xxxs);
 }
 
 .search-submit-button:focus * {
